# freqlab

./: .gitignore  CLAUDE.md  LICENSE  README.md  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.docs/: VST-Workshop-Spec.md
.github/workflows/: release.yml
docs/plans/: 2025-01-07-midi-instrument-controls-design.md  2026-01-04-build-system-design.md  2026-01-05-version-control-design.md  2026-01-07-live-input-design.md  2026-01-19-notification-on-claude-finish-design.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  Info.plist  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: nih-plug-reference.md
src-tauri/src/: lib.rs
src-tauri/src/audio/: device.rs  engine.rs  input.rs  mod.rs  spectrum.rs  stereo.rs
src-tauri/src/audio/midi/: device.rs  events.rs  file.rs  mod.rs  patterns.rs  player.rs
src-tauri/src/audio/plugin/: clap_host.rs  clap_sys.rs  editor.rs  native_webview.rs  native_webview_lib.rs
src-tauri/src/commands/: agent_provider.rs  ai_context.rs  build.rs  chat.rs  claude.rs  claude_md.rs  codex.rs  files.rs  git.rs  logging.rs  mod.rs  prerequisites.rs  preview.rs  projects.rs  publish.rs  share.rs
src-tauri/src/commands/claude_knowledge/: dsp_fundamentals.rs  effect_patterns.rs  instrument_patterns.rs  mastering_patterns.rs  mod.rs  nih_plug_basics.rs  rust_audio_libs.rs  safety_rails.rs  sampler_patterns.rs
src-tauri/src/commands/claude_skills/: components.rs  core.rs  mod.rs  plugin_types.rs  ui_frameworks.rs
src-tauri/src/commands/providers/: claude_cli.rs  mod.rs  opencode.rs
src/api/: preview.ts
src/components/About/: AboutModal.tsx
src/components/Chat/: ChatInput.tsx  ChatMessage.tsx  ChatPanel.tsx  markdownUtils.tsx
src/components/Common/: Modal.tsx  Spinner.tsx  Tip.tsx  Toast.tsx  Tooltip.tsx
src/components/Layout/: Header.tsx  MainLayout.tsx  OutputPanel.tsx  PluginViewerToggle.tsx  ProjectActionBar.tsx  Sidebar.tsx
src/components/Preview/: FrequencySelector.tsx  InstrumentControls.tsx  LevelMeters.tsx  LiveInputControls.tsx  MidiFileControls.tsx  MidiLiveControls.tsx  OutputSection.tsx  PatternControls.tsx  PerformanceMonitor.tsx  (+8 more)
src/hooks/: useNetworkStatus.ts
src/lib/: tauri.ts
src/stores/: chatStore.ts  outputStore.ts  previewStore.ts  projectBusyStore.ts  projectStore.ts  settingsStore.ts  tipsStore.ts  toastStore.ts  tourStore.ts  updateStore.ts
src/types/: index.ts
src/utils/: tourRefs.ts
(+26 files in other folders)
