[package]
name = "freqlab"
version = "0.1.5"
description = "VST Plugin Development Workshop"
authors = ["Jameson"]
license = "GPL-3.0"
repository = ""
edition = "2021"
rust-version = "1.77.2"
default-run = "freqlab"

[lib]
name = "freqlab_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# Editor host binary - runs in separate process to avoid webview conflicts
[[bin]]
name = "freqlab-editor-host"
path = "src/bin/editor_host.rs"

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.19"
zip = { version = "2", default-features = false, features = ["deflate"] }
walkdir = "2"

# Audio engine
cpal = "0.15"
ringbuf = "0.4"
parking_lot = "0.12"
symphonia = { version = "0.5", default-features = false, features = ["wav", "pcm", "mp3", "aac"] }
libloading = "0.8"
notify = "7"
rand = "0.8"
realfft = "3.3"  # FFT for spectrum analysis
rubato = "0.16"  # Sample rate conversion for live input
env_logger = "0.11"
base64 = "0.22"
midly = "0.5"  # MIDI file parsing
midir = "0.10"  # MIDI device I/O
libc = "0.2.180"

# macOS native UI for plugin editor windows (using modern objc2 crates)
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = "0.3"
objc2-app-kit = "0.3"
